--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 PORT=3002
 
-PRODUCTS_MICROSERVICES_HOST=localhost
-PRODUCTS_MICROSERVICES_PORT=3001
+# PRODUCTS_MICROSERVICES_HOST=localhost
+# PRODUCTS_MICROSERVICES_PORT=3001
 
 
 # This was inserted by `prisma init`:
@@ -12,3 +12,5 @@ PRODUCTS_MICROSERVICES_PORT=3001
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/ordersdb?schema=public"
+
+NATS_SERVERS="nats://localhost:4222"
