--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,20 +1,23 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
     args:
-      [
-        'build',
-        '-t',
-        'us-east1-docker.pkg.dev/tienda-microservices-448021/image-registry/orders-ms',
-        '-f',
-        'dockerfile.prod',
-        '--platform=linux/amd64',
-        '.',
-      ]
+      - -c
+      - |
+        docker build -t us-east1-docker.pkg.dev/tienda-microservices-448021/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDERS_DATABASE_URL=$$DATABASE_URL .
+    secretEnv: ['DATABASE_URL']
+
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
         'push',
         'us-east1-docker.pkg.dev/tienda-microservices-448021/image-registry/orders-ms',
       ]
+
+availableSecrets:
+  secretManager:
+    - versionName: projects/1075909477180/secrets/order_database_url/versions/1
+      env: 'DATABASE_URL'
+
 options:
   logging: CLOUD_LOGGING_ONLY
